--- a/views/default/chat.html
+++ b/views/default/chat.html
@@ -50,6 +50,7 @@
                         <!--content part-->
                         <div class="chat-content">
                         </div>
+                        <a href="#" id="bottom-chat"><i class="icon-chevron-down icon-white"></i></a>
                         <!--input <part--></part-->
                         <div id="chat-input">
                             <textarea  id="chat_message" class="input-block-level" placeholder='{{=T("chat here")}}...'></textarea>
