--- a/views/default/chat.html
+++ b/views/default/chat.html
@@ -10,28 +10,26 @@
         </div><!-- /chat-control-->
         <!-- chat-content -->
         <div id="chat-content">
-            <!--contact-control-->
-            <div id="contact-control">
-                <div class="btn-group pull-right">
-                    <button id="change_status" class="dropdown-toggle btn-nostyle" data-toggle="dropdown">
-                        <i class="icon-chevron-down"></i>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icofont-certificate color-green"></i> Online</a></li>
-                        <li><a href="#"><i class="icofont-certificate color-silver-dark"></i> Offline</a></li>
-                        <li><a href="#"><i class="icofont-certificate color-red"></i> {{=T("Busy")}}</a></li>
-                        <li><a href="#"><i class="icofont-certificate color-orange"></i> {{=T("Idle")}}</a></li>
-                    </ul>
-                </div>
-                <div id="user_container">
-
-                </div>
-            </div><!--/contact-control-->
 
             <div class="tab-content">
-
                 <!--contact-->
                 <div class="tab-pane fade active in" id="contact">
+                    <!--contact-control-->
+                    <div id="contact-control">
+                        <div class="btn-group pull-right">
+                            <button id="change_status" class="dropdown-toggle btn-nostyle" data-toggle="dropdown">
+                                <i class="icon-chevron-down"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#"><i class="icofont-certificate color-green"></i> Online</a></li>
+                                <li><a href="#"><i class="icofont-certificate color-silver-dark"></i> Offline</a></li>
+                                <li><a href="#"><i class="icofont-certificate color-red"></i> {{=T("Busy")}}</a></li>
+                            </ul>
+                        </div>
+                        <div id="user_container">
+
+                        </div>
+                    </div><!--/contact-control-->
                     <div class="side-contact">
                         <!--contact-list, we set this max-height:380px, you can set this if you want-->
                         <ul class="contact-list">
@@ -43,14 +41,14 @@
                 <!--chat-->
                 <div class="tab-pane fade" id="teamchat">
                     <div class="side-chat">
-                        <!--header part-->
-<!--                         <div class="chat-header">
-                            <h5><i class="icofont-certificate color-green"></i> Jane smith</h5>
-                        </div> -->
-                        <!--content part-->
-                        <div class="chat-content">
+
+                        <div class="chat-messages" id="chat-messages">
+                            <div id="chat-messages-inner" class="chat-content">
+
+                            <a href="#" id="bottom-chat"><i class="icon-chevron-down icon-white"></i></a>
+                            </div>
                         </div>
-                        <a href="#" id="bottom-chat"><i class="icon-chevron-down icon-white"></i></a>
+
                         <!--input <part--></part-->
                         <div id="chat-input">
                             <textarea  id="chat_message" class="input-block-level" placeholder='{{=T("chat here")}}...'></textarea>
