--- a/views/default/chat.html
+++ b/views/default/chat.html
@@ -5,7 +5,7 @@
         <div class="chat-control">
             <ul class="item grd-white">
                 <li class="active"><a href="#contact" data-toggle="tab" title='{{=T("Users")}}'><i class="icon-adult"></i> {{=T("Users")}}</a></li>
-                <li class=""><a href="#teamchat" data-toggle="tab" title='{{=T("Group Chat")}}'><i class="icon-group"></i> {{=T("Group Chat")}}</a></li>
+                <li id="chat-group"><a href="#teamchat" data-toggle="tab" title='{{=T("Group Chat")}}'><i class="icon-group"></i> {{=T("Group Chat")}}</a></li>
             </ul>
         </div><!-- /chat-control-->
         <!-- chat-content -->
@@ -53,6 +53,7 @@
                         <div id="chat-input">
                             <textarea  id="chat_message" class="input-block-level" placeholder='{{=T("chat here")}}...'></textarea>
                         </div>
+                        <audio id="chatAudio"><source src='{{=URL("static", "audio/notify.ogg")}}' type="audio/ogg"><source src='{{=URL("static", "audio/notify.mp3")}}' type="audio/mpeg"><source src='{{=URL("static", "audio/notify.wav")}}' type="audio/wav"></audio>
                     </div>
                     <div class="divider-content"><span></span></div>
                 </div><!--chat-->
