--- a/views/default/board.html
+++ b/views/default/board.html
@@ -67,7 +67,7 @@
     <div id="breadcrumb">
         <a href='{{=URL("index")}}' title="{{=T('Go to')}} {{=T('Home')}}" class="tip-bottom"><i class="icon-home"></i> Home</a>
         <a href="#" class="current"><i class="icon-list-alt"></i>{{=T('Board')}}</a>
-        <button id="call_chat" class="btn btn-nostyle pull-right" alt="Chat" title="Chat"><i class="icon-comment-alt color-green"></i> Chat</button>
+        <button class="call_chat btn btn-nostyle pull-right" alt="Chat" title="Chat"><i class="icon-comment-alt color-green"></i> Chat</button>
         <div class="clearfix"></div>
     </div>
 </div>
