--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -213,8 +213,8 @@
     padding-bottom: 20px;
     overflow: hidden;
     overflow-y: auto;
-    height: 400px;
-    max-height: 400px;
+    /*height: 400px;*/
+    /*max-height: 400px;*/
 }
 
 .side-chat .chat-content .chat-message{
@@ -238,6 +238,7 @@
     font-size: 13px;
     color: #626262;
     max-width: 100%;
+    height: 60px;
 }
 
 .chat-control > ul.item{
@@ -335,4 +336,17 @@
 
 #bottom-chat i {
   color: #fff;
+}
+
+#chat_config {
+    min-height: 400px;
+}
+
+#chat_config span {
+    display: block;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    background-color: green;
 }
