--- a/views/default/chat.html
+++ b/views/default/chat.html
@@ -4,8 +4,10 @@
     <div id="chat-container">
         <div class="chat-control">
             <ul class="item grd-white">
-                <li class="active"><a href="#contact" data-toggle="tab" title='{{=T("Users")}}'><i class="icon-adult"></i> {{=T("Users")}}</a></li>
+                <li class="active"><a href="#contact" data-toggle="tab" title='{{=T("Team")}}'><i class="icon-adult"></i> {{=T("Team")}}</a></li>
                 <li id="chat-group"><a href="#teamchat" data-toggle="tab" title='{{=T("Group Chat")}}'><i class="icon-group"></i> {{=T("Group Chat")}}</a></li>
+                <li class="call_chat"><button class="btn-nostyle" title='{{=T("minimize")}}'><i class="icon-minus"></i></button></li>
+                <li id="chat-group"><a href="#chatconfig" data-toggle="tab" title='{{=T("Group Chat")}}'><i class="icon-cog"></i></a></li>
             </ul>
         </div><!-- /chat-control-->
         <!-- chat-content -->
@@ -38,7 +40,7 @@
                     </div>
                 </div><!--/contact-->
 
-                <!--chat-->
+                <!--teamchat-->
                 <div class="tab-pane fade" id="teamchat">
                     <div class="side-chat">
 
@@ -48,17 +50,28 @@
                             <a href="#" id="bottom-chat"><i class="icon-chevron-down icon-white"></i></a>
                             </div>
                         </div>
+                        <!-- audio on message -->
+                        <audio id="chatAudio"><source src='{{=URL("static", "audio/notify.ogg")}}' type="audio/ogg"><source src='{{=URL("static", "audio/notify.mp3")}}' type="audio/mpeg"><source src='{{=URL("static", "audio/notify.wav")}}' type="audio/wav"></audio>
 
-                        <!--input <part--></part-->
                         <div id="chat-input">
                             <textarea  id="chat_message" class="input-block-level" placeholder='{{=T("chat here")}}...'></textarea>
                         </div>
-                        <audio id="chatAudio"><source src='{{=URL("static", "audio/notify.ogg")}}' type="audio/ogg"><source src='{{=URL("static", "audio/notify.mp3")}}' type="audio/mpeg"><source src='{{=URL("static", "audio/notify.wav")}}' type="audio/wav"></audio>
                     </div>
                     <div class="divider-content"><span></span></div>
-                </div><!--chat-->
+                </div><!-- /teamchat -->
+
+                <!--chatconfig-->
+                <div class="tab-pane fade" id="chatconfig">
+                    <div id="chat_config">
+                        <h5>Notifications</h5>
+                        <button id="authorize_notification" class="btn btn-primary">ON</button>
+                        <br>
+                        <br>
+                        <span style="display:none;">OK</span>
+                    </div>
+                </div><!-- /chatconfig -->
 
             </div>
         </div><!-- /chat-content -->
     </div><!-- /chat-container -->
-</aside>
+</aside><!-- /chat-->
