--- a/static/css/team.css
+++ b/static/css/team.css
@@ -44,6 +44,11 @@ li {
     margin-bottom: 5px;
 }
 
+.role_content hr {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
 .edit_role:hover {
     text-decoration: none;
 }
