--- a/views/default/board.html
+++ b/views/default/board.html
@@ -14,7 +14,7 @@
         card_delete_comment : '{{=URL(r=request,f="call",args=["json","_card_delete_comment"])}}',
         update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
         chat_all_users : '{{=URL(r=request,f="call",args=["json","chat_all_users"])}}',
-        send_message_chat : '{{=URL(r=request,f="call",args=["json","send_message_chat"])}}',
+        send_message_chat_group : '{{=URL(r=request,f="call",args=["json","send_message_chat_group"])}}',
         user_online_now : '{{=URL(r=request,f="call",args=["json","user_online_now"])}}',
     },
     msg = {
