--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -20,6 +20,7 @@
         info = {
             project_id : '{{=project.id}}',
             page : '{{=request.function}}',
+            have_permissitions : JSON.parse('{{="true" if have_permissitions else "false"}}'),
         },
         buttons = {
             DR : '{{=T("DR")}}',
@@ -74,6 +75,8 @@
                                         <div class="buttons_container">
                                             <button class="btn btn-nostyle expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
                                                 <i class="icon-circle-arrow-down"></i></button>
+                                        {{if have_permissitions:}}
+                                        <!-- if the user has permission to edit items -->
                                             <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                             <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                             {{selects="P M G GG".split()}}
@@ -99,6 +102,8 @@
                                             <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
                                             <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                             <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                        <!-- if the user has permission to edit items -->
+                                        {{pass}}
                                         </div>
                                         <div class="clearfix"></div>
                                     </div>
@@ -115,8 +120,12 @@
                                                     </div>
                                                     <div class="buttons_container">
                                                         <button class="btn btn-nostyle expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-up"></i></button>
+                                                    {{if have_permissitions:}}
+                                                    <!-- if the user has permission to edit items -->
                                                         <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                         <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                                    <!-- if the user has permission to edit items -->
+                                                    {{pass}}
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </div><!-- definition_ready -->
@@ -127,10 +136,13 @@
                                                             <div class="text_container">
                                                                 <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_or_update_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                                             </div>
+                                                        {{if have_permissitions:}}
+                                                        <!-- if the user has permission to edit items -->
                                                             <div class="buttons_container">
                                                                 <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
                                                                 <button class="btn btn-nostyle comment_definition_ready pull-right" alt='{{=T("comments")}}' title='{{=T("comments")}}'><i class="icon-comment-custom"><span>0</span></i></button>
                                                             </div>
+                                                        {{pass}}
                                                             <div class="clearfix"></div>
                                                         </li><!-- task -->
                                                     </ul>
@@ -144,8 +156,12 @@
                                     </div>
                                 </li><!-- story -->
                                 <div class="buttons_footer">
+                            {{if have_permissitions:}}
+                            <!-- if the user has permission to edit items -->
                                     <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
                                     <div class="clearfix"></div>
+                            <!-- if the user has permission to edit items -->
+                            {{pass}}
                                 </div>
                             </ul>
                         {{pass}}
@@ -205,6 +221,8 @@
                                 <div class="buttons_container">
                                     <button class="btn btn-nostyle expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
                                         <i class="icon-circle-arrow-down"></i></button>
+                                {{if have_permissitions:}}
+                                <!-- if the user has permission to edit items -->
                                     <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                     <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                     {{selects="P M G GG".split()}}
@@ -230,6 +248,10 @@
                                     <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
                                     <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                     <span class="label qtd_definition_ready pull-right tip-bottom"  alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+
+                                <!-- if the user has permission to edit items -->
+                                {{pass}}
+
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
@@ -246,8 +268,11 @@
                                             </div>
                                             <div class="buttons_container">
                                                 <button class="btn btn-nostyle expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-circle-arrow-up"></i></button>
+                                            {{if have_permissitions:}}
+                                            <!-- if the user has permission to edit items -->
                                                 <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                 <button class="btn create_task pull-right" alt='{{=T("Create Task")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                            {{pass}}
                                             </div>
                                             <div class="clearfix"></div>
                                         </div><!-- definition_ready -->
@@ -258,10 +283,13 @@
                                                     <div class="text_container">
                                                         <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_or_update_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                                     </div>
+                                                {{if have_permissitions:}}
+                                                <!-- if the user has permission to edit items -->
                                                     <div class="buttons_container">
                                                         <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                         <button class="btn btn-nostyle comment_definition_ready pull-right" alt='{{=T("comments")}}' title='{{=T("comments")}}'><i class="icon-comment-custom"><span>0</span></i></button>
                                                     </div>
+                                                {{pass}}
                                                     <div class="clearfix"></div>
                                                 </li><!-- task -->
                                             </ul>
@@ -275,8 +303,12 @@
                         </div>
                         </li><!-- story -->
                         <div class="buttons_footer">
+                    {{if have_permissitions:}}
+                    <!-- if the user has permission to edit items -->
                             <button class="btn btn-danger pull-right back_backlog"><i class="icon-circle-arrow-left icon-white"></i> {{=T("Back to Backlog")}}</button>
                             <div class="clearfix"></div>
+                    <!-- if the user has permission to edit items -->
+                    {{pass}}
                         </div>
                     </ul>
                 {{pass}}
