--- a/views/default/board.html
+++ b/views/default/board.html
@@ -61,13 +61,12 @@
 <div id="mask"></div>
 <!-- chat -->
 {{include "default/chat.html"}}
-
+<button class="call_chat button_chat btn btn-success" alt="Chat" title="Chat"><i class="icon-comment-alt"></i> Chat</button>
 
 <div id="content-header">
     <div id="breadcrumb">
         <a href='{{=URL("index")}}' title="{{=T('Go to')}} {{=T('Home')}}" class="tip-bottom"><i class="icon-home"></i> Home</a>
         <a href="#" class="current"><i class="icon-list-alt"></i>{{=T('Board')}}</a>
-        <button class="call_chat btn btn-nostyle pull-right" alt="Chat" title="Chat"><i class="icon-comment-alt color-green"></i> Chat</button>
         <div class="clearfix"></div>
     </div>
 </div>
