--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -169,7 +169,7 @@
             <!-- call realtime JS -->
             <script>
                 var project_id = "{{=request.args(0)}}",
-                    txt = {
+                    txtGlobal = {
                         titleNotification : '{{=T("New message from")}}',
                     };
             </script>
@@ -189,7 +189,7 @@
               forum_id: 207481,
               tab_label: 'Feedback',
               tab_color: '#292929',
-              tab_position: 'bottom-right',
+              tab_position: 'bottom-left',
               tab_inverted: false
             }]);
             </script>
