--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -80,6 +80,7 @@
                                         <div class="buttons_container">
                                             <button class="btn btn-nostyle expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
                                                 <i class="icon-circle-arrow-down"></i></button>
+
                                         {{if have_permissitions:}}
                                         <!-- if the user has permission to edit items -->
                                             <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
@@ -106,9 +107,15 @@
                                             </select>
                                             <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
                                             <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
-                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
                                         <!-- if the user has permission to edit items -->
+                                        {{else:}}
+                                            <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}' disabled>
+                                                <option value="{{=story.benefit}}" selected>{{=story.benefit}}</option>
+                                            </select>
+                                            <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}' disabled>
+                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
                                         {{pass}}
+
                                         </div>
                                         <div class="clearfix"></div>
                                     </div>
@@ -258,8 +265,14 @@
                                     <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                     <span class="label qtd_definition_ready pull-right tip-bottom"  alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
 
-                                <!-- if the user has permission to edit items -->
-                                {{pass}}
+                                    <!-- if the user has permission to edit items -->
+                                    {{else:}}
+                                        <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}' disabled>
+                                            <option value="{{=story.benefit}}" selected>{{=story.benefit}}</option>
+                                        </select>
+                                        <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}' disabled>
+                                        <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                    {{pass}}
 
                                 </div>
                                 <div class="clearfix"></div>
