--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -109,12 +109,10 @@
                                             <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                         <!-- if the user has permission to edit items -->
                                         {{else:}}
-                                            <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}' disabled>
-                                                <option value="{{=story.benefit}}" selected>{{=story.benefit}}</option>
-                                            </select>
-                                            <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}' disabled>
-                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                            <span class="no_perm_itens pull-right tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>{{=story.benefit}}</span>
+                                            <span class="no_perm_itens pull-right tip-bottom" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>{{=g_blank_check(story.story_points)}}</span>
                                         {{pass}}
+                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
 
                                         </div>
                                         <div class="clearfix"></div>
@@ -263,16 +261,13 @@
                                     </select>
                                     <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
                                     <button class="btn create_definition_ready pull-right tip-bottom" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>+ {{=T('DR')}}</button>
-                                    <span class="label qtd_definition_ready pull-right tip-bottom"  alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
 
                                     <!-- if the user has permission to edit items -->
                                     {{else:}}
-                                        <select class="pull-right benefit tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}' disabled>
-                                            <option value="{{=story.benefit}}" selected>{{=story.benefit}}</option>
-                                        </select>
-                                        <input class="pull-right story_points only_numbers tip-bottom" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}' disabled>
-                                        <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                        <span class="no_perm_itens pull-right tip-bottom" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>{{=story.benefit}}</span>
+                                        <span class="no_perm_itens pull-right tip-bottom" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>{{=g_blank_check(story.story_points)}}</span>
                                     {{pass}}
+                                        <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
 
                                 </div>
                                 <div class="clearfix"></div>
