chat history with CTRL + arrow up/down

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1193,6 +1193,7 @@ img.thumbnail {
 }
 #chat-messages-inner .msg {
     display: block;
+    text-align: left;
     margin-top: 10px;
     font-size: 13px;
 }
